Intalación y configuración de módulo lazysizes para el tratamiento de la descarga de imagenes en forma perezosa -Lasy load images- y de modo adaptativo -NO RESPONSIVO (RESPONSIVE)- para la optimización de caraga de la plataforma en los diferentes dispositivos móviles dando prioridad a procesos más relevantes.; Se realiza integración de ficha descriptiva y listado de superhéroes. Integración carga logo DEV ECON en cabecera -Header- y pie -Footer- en carga perezoza -Lazy load image- mejorando la carga y desbloqueo de la plataforma dando prioridad a procesos más relevantes. Integración de tubería (pipe) -SafePipe- para sanar los datos externos evitando vulnerabilidad errores de seguridad de scripts de sitios cruzados (XSS) -Cross Site Scripting Security bugs (XSS)-.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
                 presionar la imagen.
             -->
             <a [routerLink]="['/']" title="DEV-ECON">DEV-ECON</a>
-            <img src="/assets/svgs/Union 1.svg" alt="DEV-ECON" />
+            <img imageLazyLoading="/assets/svgs/Union 1.svg" alt="DEV-ECON" />
         </div>
 
         <ul class="navbar-nav">
