--- a/src/app/superhero/list/list.component.html
+++ b/src/app/superhero/list/list.component.html
@@ -3,7 +3,7 @@
 </ng-template>
 
 <div class="row" *ngIf="(superHeroes$ | async) as superHeroes; else loading">
-    <div class="col-6 col-md-3" *ngFor="let superHeroe of superHeroes; index as index; trackBy: trackByFunction; ">
+    <div class="col-6 col-md-3" *ngFor="let superHero of superHeroes; index as index; trackBy: trackByFunction; ">
         <div class="card">
             <!--
                 Un enlace solo puede contener como valor texto en su etiqueta
@@ -13,21 +13,22 @@
                 por un enlace que visualmente el usuario interprete que puede
                 presionar la imagen.
             -->
-            <a [routerLink]="['/', superHeroe.id]" queryParamsHandling="merge"
-                [title]="superHeroe.name">{{superHeroe.name}}</a>
+            <a [routerLink]="['/', superHero.id]" queryParamsHandling="merge"
+                [title]="superHero.name">{{superHero.name}}</a>
 
             <figure class="card-img-top">
-                <img imageLazyLoading="{{superHeroe.images.md}}" imageLazyLoadingAlt="{{superHeroe.name}}" />
-                <figcaption>{{superHeroe.name}}</figcaption>
+                <img data-sizes="auto" data-srcset="{{superHero.imagesLazySizes()}}" class="lazyload"
+                    alt="{{superHero.name}}" />
+                <figcaption>{{superHero.name}}</figcaption>
             </figure>
 
             <div class="card-body">
                 <ul>
-                    <li>Intelligence: <strong>{{superHeroe.powerstats.intelligence || 'N'}}</strong></li>
-                    <li>Speed: <strong>{{superHeroe.powerstats.speed || 'N'}}</strong></li>
-                    <li>Power: <strong>{{superHeroe.powerstats.power || 'N'}}</strong></li>
-                    <li>Gender: <strong>{{superHeroe.appearance.gender || 'N'}}</strong></li>
-                    <li>Race: <strong>{{superHeroe.appearance.race || 'N'}}</strong></li>
+                    <li>Intelligence: <strong>{{superHero.powerstats.intelligence || 'N'}}</strong></li>
+                    <li>Speed: <strong>{{superHero.powerstats.speed || 'N'}}</strong></li>
+                    <li>Power: <strong>{{superHero.powerstats.power || 'N'}}</strong></li>
+                    <li>Gender: <strong>{{superHero.appearance.gender || 'N'}}</strong></li>
+                    <li>Race: <strong>{{superHero.appearance.race || 'N'}}</strong></li>
                 </ul>
             </div>
         </div>
