--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,6 +9,6 @@
             presionar la imagen.
         -->
         <a [routerLink]="['/']" title="DEV-ECON">DEV-ECON</a>
-        <img src="/assets/svgs/Union 1.svg" alt="DEV-ECON" />
+        <img imageLazyLoading="/assets/svgs/Union 1.svg" alt="DEV-ECON" />
     </div>
 </footer>
